--- a/src/app/sample-lexer-program/public/index.html
+++ b/src/app/sample-lexer-program/public/index.html
@@ -57,10 +57,7 @@
 <div class="editor" id="editor">
   <span class="line-number">1:<span class="cursor">|</span></span>
   <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
+    <span class="keyword">add</span><span class="space">&nbsp;</span><span class="registry">%a</span><span class="space">&nbsp;</span><span class="const">32</span><span class="space">&nbsp;</span><span class="registry">%a</span>
   </div>
   <span class="line-number">2: </span>
   <div class="line">
