--- a/src/app/sample-lexer-program/public/index.html
+++ b/src/app/sample-lexer-program/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <title>Sample Lexer Program</title>
   <script src="./index.js"></script>
   <link rel="stylesheet" href="./jetbrains-mono.css">
   <style>
@@ -13,7 +14,7 @@
           -webkit-font-smoothing: antialiased;
           text-rendering: optimizeLegibility;
           font-family: 'JetBrains Mono', 'sans-serif';
-          font-size: 1em;
+          font-size: 10px;
       }
 
       .editor .line-number {
@@ -38,7 +39,7 @@
           position: relative;
           width: 0;
           text-align: left;
-          left: 30px;
+          left: 0px;
           animation: 1s blink step-end infinite;
       }
 
