--- a/src/app/sample-lexer-program/public/index.html
+++ b/src/app/sample-lexer-program/public/index.html
@@ -3,7 +3,9 @@
 <head>
   <title>Sample Lexer Program</title>
   <script src="./index.js"></script>
+  <script src="./codemirror.js"></script>
   <link rel="stylesheet" href="./jetbrains-mono.css">
+  <link rel="stylesheet" href="./codemirror.css">
   <style>
       .editor {
           background: darkslategrey;
