--- a/src/app/sample-lexer-program/public/index.html
+++ b/src/app/sample-lexer-program/public/index.html
@@ -28,16 +28,20 @@
           color: azure;
       }
 
-      .editor .keyword {
+      .editor .instruction {
           color: chocolate;
       }
 
-      .editor .registry {
+      .editor .register {
           color: lightblue;
       }
 
       .editor .const {
           color: wheat;
+      }
+
+      .editor .comment {
+          color: darkgrey;
       }
 
       .cursor {
@@ -63,102 +67,6 @@
 <span class="cursor mono-font">|</span>
 <body>
 <div class="editor mono-font" id="editor">
-  <span class="line-number">1:</span>
-  <div class="line">
-    <span class="keyword">add</span><span class="space">&nbsp;</span><span class="registry">%a</span><span
-    class="space">&nbsp;</span><span class="const">32</span><span class="space">&nbsp;</span><span class="registry">%adddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</span>
-  </div>
-  <span class="line-number">2: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
-  <span class="line-number">3: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
-  <span class="line-number">4: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
-  <span class="line-number">4: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
-  <span class="line-number">4: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
-  <span class="line-number">4: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
-  <span class="line-number">4: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
-  <span class="line-number">4: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
-  <span class="line-number">4: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
-  <span class="line-number">4: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
-  <span class="line-number">4: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
-  <span class="line-number">4: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
-  <span class="line-number">4: </span>
-  <div class="line">
-    <span class="keyword">add</span>
-    <span class="registry">%a</span>
-    <span class="const">32</span>
-    <span class="registry">%a</span>
-  </div>
 </div>
 </body>
 </html>
