add deleting of code

--- a/src/app/sample-lexer-program/public/index.html
+++ b/src/app/sample-lexer-program/public/index.html
@@ -51,6 +51,7 @@
           text-align: left;
           left: 0px;
           animation: 1s blink step-end infinite;
+          user-select: none;
       }
 
       @keyframes blink {
