Added correct cursor right behavior

--- a/src/app/sample-lexer-program/public/index.html
+++ b/src/app/sample-lexer-program/public/index.html
@@ -58,7 +58,7 @@
 
       @keyframes blink {
           from, to {
-              color: transparent;
+              color: red;
           }
           50% {
               color: mintcream;
