--- a/src/app/web-ide/public/index.html
+++ b/src/app/web-ide/public/index.html
@@ -4,9 +4,19 @@
   <title>Sample Lexer Program</title>
   <script src="./index.js"></script>
   <link rel="stylesheet" href="./jetbrains-mono.css">
+  <link rel="stylesheet" href="./editor.css">
   <style>
       :root {
           --editor-font-size: 28px;
+
+          --top-nav-height: 50px;
+
+          --color-primary: #272727;
+          --color-background: #1e1e1e;
+      }
+
+      body {
+          margin: 0;
       }
 
       .mono-font {
@@ -17,59 +27,57 @@
           font-size: var(--editor-font-size);
       }
 
-      .editor {
-          background: darkslategrey;
+      .ide {
+          background: var(--color-background);
+          width: 100%;
+          height: 100vh;
+
           display: grid;
-          grid-template-columns: auto 1fr;
+          grid-template-areas:
+            "top-nav top-nav"
+            "editor-panel console";
+          grid-template-columns: 3fr 1fr;
+          grid-template-rows: var(--top-nav-height) 1fr;
+          grid-gap: 15px;
       }
 
-      .editor .line-number {
-          padding-right: 1rem;
-          color: azure;
-          user-select: none;
+      .top-nav {
+          grid-area: top-nav;
+
+          background: var(--color-primary);
       }
 
-      .editor .instruction {
-          color: chocolate;
+      .top-nav .title {
+          color: white;
+
+          font-size: calc(var(--top-nav-height) - 5px);
+          margin: 0;
       }
 
-      .editor .register {
-          color: lightblue;
+      .console {
+          grid-area: console;
+
+          background: var(--color-primary);
       }
 
-      .editor .const {
-          color: wheat;
+      .editor-panel {
+          grid-area: editor-panel;
       }
-
-      .editor .comment {
-          color: darkgrey;
-      }
-
-      .cursor {
-          color: mintcream;
-          position: absolute;
-          display: block;
-          width: 0;
-          text-align: left;
-          left: 0;
-          animation: 1s blink step-end infinite;
-          user-select: none;
-      }
-
-      @keyframes blink {
-          from, to {
-              color: red;
-          }
-          50% {
-              color: mintcream;
-          }
-      }
-
   </style>
 </head>
-<span class="cursor mono-font">|</span>
 <body>
-<div class="editor mono-font" id="editor">
+<div class="ide">
+  <div class="top-nav mono-font">
+    <h1 class="title">
+      JS-VM WEB-IDE
+    </h1>
+  </div>
+  <div class="editor-panel">
+    <span class="cursor mono-font" aria-selected="false">|</span>
+    <div class="editor mono-font" id="editor">
+    </div>
+  </div>
+  <div class="console">asdf</div>
 </div>
 </body>
 </html>
